# mail-keeper

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/skills/release/: SKILL.md
.github/workflows/: ci.yml  release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
doc/: MailKeeper-Handoff.html  imap-simulator-engine-spec.md  imap-simulator-plan.md  lessons-learned.md  mailkeeper-performance-report-20260627.html  release-smoke.md
scripts/: coverage.ps1  mutation.ps1  stamp-build.py  verify-package.ps1
specs/001-crashproof-io/: plan.md  spec.md  tasks.md
specs/001-crashproof-io/checklists/: requirements.md
specs/002-config-onboarding/: plan.md  spec.md  tasks.md
specs/002-config-onboarding/checklists/: requirements.md
specs/003-csv-classify/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-csv-classify/checklists/: requirements.md
specs/003-csv-classify/contracts/: interfaces.md
specs/004-output-ux-progress/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-bulk-resilience/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-bulk-classify-efficiency/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-bulk-move-efficiency/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-bulk-fetch-resilience/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mailkeeper/: __init__.py  __main__.py  auth.py  buildinfo.py  classifier.py  cli.py  config.py  config_store.py  console.py  csv_io.py  domain.py  imap_client.py  menu.py  organizer.py  progress.py
tests/: conftest.py  imap_dataset.py  imap_server.py  imap_sim.py  imap_transport.py  imaplib_probe.py  test_backend.py  test_buildinfo.py  test_classifier.py  test_cli_boundary.py  test_cli_config_flow.py  test_cli_coverage.py  test_cli_csv_flow.py  test_cli_output.py  test_config_store.py  test_console.py  test_csv_io.py  test_decode.py  test_imap_client_coverage.py  test_imap_contract.py  test_imap_dataset.py  test_imap_fidelity.py  test_imap_loop_regression.py  test_imap_server.py  test_imap_server_behaviors.py  test_imap_server_extensions.py  test_imap_server_faults.py  test_imap_server_mime.py  test_imap_server_p2.py  test_imap_sim.py  test_imap_timeout.py  test_menu.py  test_mismatch.py  test_progress.py  test_resilience.py  test_unit_coverage.py
tests/e2e/: e2e_bulk_30000.py
tests/e2e/baselines/: S1.json  S2.json  (+6 more)
(+18 files in other folders)
