[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailkeeper"
version = "0.6.3"
description = "替你看管收件匣 —— 登入 Outlook.com IMAP，讀取郵件標題並依規則自動整理"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Hefeng" }]
keywords = ["outlook", "imap", "email", "oauth2", "xoauth2", "mail-organizer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Email",
    "Environment :: Console",
]
dependencies = [
    "msal>=1.28.0",
    "charset-normalizer>=3",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-cov>=5",
    "mypy>=1.10",
]

[project.scripts]
mailkeeper = "mailkeeper.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mutmut]
paths_to_mutate = "src/mailkeeper/"
runner = "python -m pytest -x -q"
